# Krawl-MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  generate_config.py  pyproject.toml  server.py
tests/: __init__.py  test_auth_and_remote.py  test_server.py
