[project]
name = "krawl-mcp"
version = "0.1.0"
description = "Krawl MCP - Web Search and Web Scraping capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastmcp>=3.1.0",
    "playwright>=1.58.0",
    "trafilatura>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
